--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -27,6 +26,26 @@ form {
   margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
+}
+
+.results {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 2rem;
+}
+
+.results h2 {
+  margin-bottom: 1rem;
+}
+
+.results > p {
+  margin-bottom: 0.5rem;
+}
+
+.results span {
+  font-weight: bold;
 }
 
 #search {
