--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -40,7 +39,7 @@
   opacity: 0.9;
 }
 
-.output-cointainer {
+.output-container {
   width: 100%;
   margin: 25px 0;
   display: flex;
@@ -48,14 +47,55 @@
   align-items: center;
 }
 
-.output-cointainer h1 {
+.output-container h1 {
   color: #fff;
 }
 
-.output-cointainer #output {
+.output-container #output {
   width: 80%;
   margin-top: 25px;
   padding: 30px;
   border-radius: 5px;
   background-color: #fff;
+}
+
+.oneCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 4px 8px 0px #7c7c7c;
+  border-radius: 10px;
+}
+
+.oneCard img {
+  width: 80%;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
+  border-radius: 10px;
+}
+
+.oneCard p {
+  margin-bottom: 2rem;
+  font-size: 1.1rem;
+  text-transform: capitalize;
+  font-weight: bolder;
+}
+
+#output {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-evenly;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 769px) {
+  #output {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 426px) {
+  #output {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
