--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -26,4 +25,38 @@
 .container h1 {
   margin-top: 50px;
   color: #333;
+  margin-bottom: 3rem;
+}
+
+#output {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.oneCard {
+  flex-basis: 35%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 1rem;
+  text-align: center;
+}
+
+.brand {
+  font-size: 2rem;
+  padding-bottom: 2rem;
+}
+
+.models {
+  padding-bottom: 4rem;
+}
+
+.card {
+  padding: 1rem;
+  box-shadow: 5px 5px 10px rgb(183, 203, 238);
+  border: 1px solid rgb(155, 155, 155);
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
 }
