--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -26,6 +26,16 @@ form {
   margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
+  padding: 0.5rem;
+  box-shadow: 5px 5px 10px rgb(54, 54, 54);
+  border: 1px solid rgb(191, 180, 180);
+  border-radius: 5px;
+  background-color: snow;
+}
+
+#output {
+  width: 80%;
+  margin: 0 auto;
 }
 
 .results {
@@ -34,6 +44,14 @@ form {
   justify-content: center;
   flex-direction: column;
   font-size: 2rem;
+}
+
+.card {
+  padding: 1rem;
+  box-shadow: 5px 5px 10px rgb(54, 54, 54);
+  border: 1px solid rgb(191, 180, 180);
+  border-radius: 5px;
+  background-color: snow;
 }
 
 .results h2 {
