--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -26,27 +26,45 @@
   margin-top: 50px;
   color: #333;
   margin-bottom: 3rem;
+  font-size: 3rem;
 }
 
 #output {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  gap: 1rem;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .oneCard {
-  flex-basis: 35%;
+  flex-basis: 31%;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   margin: 1rem;
   text-align: center;
+  flex-grow: 1;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.oneCard:hover {
+  transform: translateY(-10px);
+  background-color: rgb(172, 211, 255);
+  box-shadow: 5px 5px 10px rgb(121, 143, 182);
+
+  color: black;
 }
 
 .brand {
   font-size: 2rem;
   padding-bottom: 2rem;
+  transition: 0.2s;
+}
+.oneCard:hover .brand {
+  font-size: 2.2rem;
 }
 
 .models {
@@ -59,4 +77,25 @@
   border: 1px solid rgb(155, 155, 155);
   border-radius: 5px;
   background-color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width: 769px) {
+  .oneCard:hover .brand {
+    font-size: 1.2rem;
+  }
+  .card {
+    padding: 0.2rem;
+  }
+  .brand {
+    font-size: 1rem;
+  }
+  .models {
+    font-size: 0.8rem;
+    padding-bottom: 1rem;
+  }
+  #output {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.3rem;
+  }
 }
